--- a/pia/pia/templates/index.html
+++ b/pia/pia/templates/index.html
@@ -17,6 +17,7 @@
     <img src= "{% static 'img/bts.jpg' %}" alt="BTS" width="500px">
     <br>
     <h1>Nuestras sucursales</h1>
+    <h2>Bla</h2>
 
     {% for sucursal in sucursales %}
     <p> {{sucursal.nombre }}</p>
